# MiniSQL

./: CMakeLists.txt
database/: gens.csv  homes.csv  hw_200.csv  languages.csv  plats.csv
queries/: test1.sql  test10.sql  test2.sql  test3.sql  test4.sql  test5.sql  test6.sql  test7.sql  test8.sql  test9.sql
samples/: out.txt  projets.csv  q1.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql
src/: main.cpp
src/SQL_Compiler/: CSV_reader.cpp  CSV_reader.hpp  base_operator.cpp  base_operator.hpp  context.cpp  context.hpp  cp_operator.cpp  cp_operator.hpp  filter_operator.cpp  filter_operator.hpp  join_operator.cpp  join_operator.hpp  minus_operator.cpp  minus_operator.hpp  operators.hpp  optimizer.cpp  optimizer.hpp  project_operator.cpp  project_operator.hpp  query_builder.cpp  query_builder.hpp  sorter_operator.cpp  sorter_operator.hpp  tuple.cpp  tuple.hpp  union_operator.cpp  union_operator.hpp
src/SQL_Parser/: SQL_AST.hpp  SQL_AST_adapted.hpp  SQL_AST_printer.cpp  SQL_annotation.hpp  SQL_config.hpp  SQL_error_handler.hpp  SQL_parser.cpp  SQL_parser.hpp  normal_form.cpp  normal_form.hpp  query.cpp  query.hpp  query_def.hpp
